????? ??, 2013 - 5.1.0:

Fixed bug 1059: Change rule name "Use Singleton" should be "Use Utility class"

New EcmaScript rules and ruleset:
	Controversial ruleset, featuring
		- AvoidWithStatement
	UseBaseWithParseInt

New Java rules:
	GuardLogStatement
		- replace xpath implementation of GuardDebugLogging by GuardLogStatement (better perf)
	CommentRequired
		- basic rule to check for existence for formal (javadoc) comments.
	AvoidProtectedMethodInFinalClassNotExtending
		- rule to avoid protected methods in final classes that don't extend anything other than Object.
	ConsecutiveAppendsShouldReuse
		- rule to encourage to reuse StringBuilder.append returned object for consecutive calls.

CPD Command Line Changes:
  Added non-recursive option "--non-recursive" to not scan sub-directories


????? ??, 2013 - 5.0.5:

Fixed bug  991: AvoidSynchronizedAtMethodLevel for static methods
Fixed bug 1114: CPD - Tokenizer not initialized with requested properties
Fixed bug 1118: ClassCastException in pmd.lang.ecmascript.ast.ASTElementGet


May 1, 2013 - 5.0.4:

Fixed bug  254: False+ : UnusedImport with Javadoc @throws
Fixed bug  794: False positive on PreserveStackTrace with anonymous inner
Fixed bug 1063: False+: ArrayIsStoredDirectly
Fixed bug 1080: net.sourceforge.pmd.cpd.CPDTest test failing
Fixed bug 1081: Regression: CPD skipping all files when using relative paths
Fixed bug 1082: CPD performance issue on larger projects
Fixed bug 1085: NullPointerException by at net.sourceforge.pmd.lang.java.rule.design.GodClassRule.visit(GodClassRule.java:313)
Fixed bug 1086: Unsupported Element and Attribute in Ant Task Example
Fixed bug 1087: PreserveStackTrace (still) ignores initCause()
Fixed bug 1089: When changing priority in a custom ruleset, violations reported twice


April 5, 2013 - 5.0.3:

Fixed bug  938: False positive on LooseCoupling for overriding methods
Fixed bug  940: False positive on UnsynchronizedStaticDateFormatter